--- a/src/styles/aboutDevelopment.scss
+++ b/src/styles/aboutDevelopment.scss
@@ -16,11 +16,16 @@
     position: absolute;
     top: 15%;
     left: 10%;
+    @media (max-width: 1280px) {
+      top: 12px;
+      left: -2%;
+    }
     @media (max-width: 768px) {
       background-size: cover;
       width: 32px;
       height: 32px;
       top: 12px;
+      left: -2%;
     }
   }
   &::before {
