--- a/src/styles/exemples.scss
+++ b/src/styles/exemples.scss
@@ -44,6 +44,7 @@
     justify-content: space-between;
     row-gap: 27px;
     margin-top: 51px;
+
     @media (max-width: 480px) {
       //overflow: hidden;
       max-height: 923px;
@@ -60,6 +61,14 @@
     color: #fff;
     transition: 0.3s;
     position: relative;
+    &:nth-child(-n + 3),
+    &:nth-last-child(-n + 3) {
+      display: none;
+      @media (max-width: 480px) {
+        display: block;
+      }
+    }
+
     @media (max-width: 480px) {
       min-width: 100%;
     }
