--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -91,7 +91,6 @@
       }
     }
     &-active {
-      margin-right: 50px;
       span {
         transform: translateX(26px);
       }
